# ObjGTK

./: ObjGTK.oc.in  configure.ac  extra.mk.in
src/: Makefile
